apostila de novo

--- a/APOSTILA.ipynb
+++ b/APOSTILA.ipynb
@@ -4,15 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1><br/>\n",
-    "<center><u>Apostila de Introdução à Programação</u></center></h1>"
+    "## Apostila de Introdução à Programação"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <center><u>Com ênfase em automação de documentos</u></center></h1>"
+    "### Com ênfase em automação de documentos"
    ]
   },
   {
