--- a/APOSTILA.ipynb
+++ b/APOSTILA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Apostila de Introdução à Programação"
+    "## <center>  Apostila de Introdução à Programação </center>"
    ]
   },
   {
