--- a/Aulas/Aula1.ipynb
+++ b/Aulas/Aula1.ipynb
@@ -469,7 +469,7 @@
     "<ol>\n",
     "    <li>Faça um programa que mostre a mensagem \"Alo mundo\" na tela.</li>\n",
     "    <li>Faça um programa que peça as 4 notas bimestrais e mostre a média.</li>\n",
-    "    <li>Faça um programa que peça o raio de um círculo, calcule e mostre sua área.</li>\n",
+    "    <li>Faça um programa que peça o raio de um círculo, calcule e mostre sua área. (pi = 3.14)</li>\n",
     "    <li>Faça um programa que pergunte quanto você ganha por hora e o número de horas trabalhadas no mês. Calcule e mostre o total do seu salário no referido mês.</li>\n",
     "    <li>Faça um programa que peça a temperatura em graus Farenheit, transforme e mostre a temperatura em graus Celsius.\n",
     "C = (5 * (F-32) / 9).</li>\n",
@@ -480,6 +480,12 @@
     "            <li>o terceiro elevado ao cubo.</li>\n",
     "        </ul>\n",
     "    </li>\n",
+    "    <li>João Papo-de-Pescador comprou um microcomputador para controlar o rendimento diário de seu \n",
+    "        trabalho. Toda vez que ele traz um peso de peixes maior que o estabelecido pelo regulamento de pesca do \n",
+    "        estado de São Paulo (50 quilos) deve pagar uma multa de R$ 4,00 por quilo excedente. João precisa que você \n",
+    "        faça um programa que leia a variável peso (peso de peixes) e calcule o excesso. Gravar na variável excesso a \n",
+    "        quantidade de quilos além do limite e na variável multa o valor da multa que João deverá pagar. Imprima os \n",
+    "        dados do programa com as mensagens adequadas.</li>\n",
     "    <li>Faça um programa que pergunte quanto você ganha por hora e o número de horas trabalhadas no mês. Calcule e mostre o total do seu salário no referido mês, sabendo-se que são descontados 11% para o Imposto de Renda, 8% para o INSS e 5% para o sindicato, faça um programa que nos dê:\n",
     "        <ul>\n",
     "            <li>salário bruto.</li>\n",
