--- a/Aulas/Aula1.ipynb
+++ b/Aulas/Aula1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Entrada e saída de dados</h2>\n"
+    "<h2>Entrada e saída de dados</h2>"
    ]
   },
   {
@@ -16,8 +16,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Qual seu nome?clara\n",
-      "clara\n"
+      "Qual seu nome?Renata\n",
+      "Renata\n"
      ]
     }
    ],
@@ -101,8 +101,8 @@
     }
    ],
    "source": [
-    "fome = True\n",
-    "print(type(fome))"
+    "sonolento = True\n",
+    "print(type(sonolento))"
    ]
   },
   {
@@ -126,7 +126,7 @@
     }
    ],
    "source": [
-    "print(10+3)"
+    "print(10+2)"
    ]
   },
   {
@@ -143,7 +143,7 @@
     }
    ],
    "source": [
-    "print(10-3)"
+    "print(10-2)"
    ]
   },
   {
@@ -160,24 +160,41 @@
     }
    ],
    "source": [
-    "print(10*3)"
+    "print(10*2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.3333333333333335\n"
+      "1.6666666666666667\n"
      ]
     }
    ],
    "source": [
-    "print(10/3)"
+    "print(10/6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(10//6)"
    ]
   },
   {
@@ -413,34 +430,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "print(str(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019\n"
+     ]
+    }
+   ],
    "source": [
     "print(int(\"2019\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.8\n"
+     ]
+    }
+   ],
    "source": [
     "print(float(\"20.8\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
