Add strings and reorder loops and lists subjects

--- a/APOSTILA.ipynb
+++ b/APOSTILA.ipynb
@@ -32,8 +32,9 @@
     "    <li>Conversão de tipos</li>\n",
     "    <li>Entrada e saída de dados</li>\n",
     "    <li>Condicionais</li>\n",
-    "    <li>Estruturas de repetição</li>\n",
+    "    <li>Strings</li>\n",
     "    <li>Listas, tuplas e dicionários</li>\n",
+    "    <li>Estruturas de repetição</li>\n",
     "    <li>Funções</li>\n",
     "    <li>Leitura de arquivos</li>\n",
     "    <li>Manipulação de arquivos de texto</li>\n",
