--- a/Aulas/Aula1.ipynb
+++ b/Aulas/Aula1.ipynb
@@ -16,8 +16,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Qual seu nome?Renata\n",
-      "Renata\n"
+      "Qual seu nome?renata\n",
+      "renata\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n"
+      "12\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "8\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n"
+      "20\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -402,6 +402,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h2>Precedência de operadores</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table style=\"width:70%\">\n",
+    "  <tr>\n",
+    "    <th style=\"text-align: left\">Operadores</th>\n",
+    "    <th style=\"text-align: left\">Significado</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td style=\"text-align: left\">()</td>\n",
+    "    <td style=\"text-align: left\">Parênteses</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td style=\"text-align: left\">**</td>\n",
+    "    <td style=\"text-align: left\">Expoente</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td style=\"text-align: left\">*, /, //, %</td>\n",
+    "    <td style=\"text-align: left\">Multiplicação, Divisão, Divisão de chão, Módulo</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td style=\"text-align: left\">+, -</td>\n",
+    "    <td style=\"text-align: left\">Adição, Subtração</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td style=\"text-align: left\">==, !=, >, >=, <, <=</td>\n",
+    "    <td style=\"text-align: left\">Operadores de comparação</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td style=\"text-align: left\">not</td>\n",
+    "    <td style=\"text-align: left\">NÃO lógico</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td style=\"text-align: left\">and</td>\n",
+    "    <td style=\"text-align: left\">E lógico</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td style=\"text-align: left\">or</td>\n",
+    "    <td style=\"text-align: left\">OU lógico</td>\n",
+    "  </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h2>Conversão de tipos</h2>\n",
     "<p>Para converter de um tipo para outro podemos fazer algo assim:</p>\n",
     "`tipo_a_ser_convertido( informação )`"
@@ -409,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -521,12 +572,6 @@
     "            <li>o terceiro elevado ao cubo.</li>\n",
     "        </ul>\n",
     "    </li>\n",
-    "    <li>João Papo-de-Pescador comprou um microcomputador para controlar o rendimento diário de seu \n",
-    "        trabalho. Toda vez que ele traz um peso de peixes maior que o estabelecido pelo regulamento de pesca do \n",
-    "        estado de São Paulo (50 quilos) deve pagar uma multa de R$ 4,00 por quilo excedente. João precisa que você \n",
-    "        faça um programa que leia a variável peso (peso de peixes) e calcule o excesso. Gravar na variável excesso a \n",
-    "        quantidade de quilos além do limite e na variável multa o valor da multa que João deverá pagar. Imprima os \n",
-    "        dados do programa com as mensagens adequadas.</li>\n",
     "    <li>Faça um programa que pergunte quanto você ganha por hora e o número de horas trabalhadas no mês. Calcule e mostre o total do seu salário no referido mês, sabendo-se que são descontados 11% para o Imposto de Renda, 8% para o INSS e 5% para o sindicato, faça um programa que nos dê:\n",
     "        <ul>\n",
     "            <li>salário bruto.</li>\n",
@@ -536,15 +581,14 @@
     "        </ul>\n",
     "    Obs.: Salário Bruto - Descontos = Salário Líquido.\n",
     "    </li>\n",
+    "    <li>João Papo-de-Pescador comprou um microcomputador para controlar o rendimento diário de seu \n",
+    "        trabalho. Toda vez que ele traz um peso de peixes maior que o estabelecido pelo regulamento de pesca do \n",
+    "        estado de São Paulo (50 quilos) deve pagar uma multa de R$ 4,00 por quilo excedente. João precisa que você \n",
+    "        faça um programa que leia a variável peso (peso de peixes) e calcule o excesso. Gravar na variável excesso a \n",
+    "        quantidade de quilos além do limite e na variável multa o valor da multa que João deverá pagar. Imprima os \n",
+    "        dados do programa com as mensagens adequadas.</li>\n",
     "</ol>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
