--- a/Aulas/Aula1_answers.ipynb
+++ b/Aulas/Aula1_answers.ipynb
@@ -183,26 +183,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peso de peixes56\n",
-      "excesso = 6\n",
-      "multa = 24\n"
+      "Insira o peso de peixes: 45\n",
+      "excesso = 45\n",
+      "multa = 180\n"
      ]
     }
    ],
    "source": [
-    "peso_de_peixes = int(input('peso de peixes'))\n",
+    "peso_de_peixes = int(input('Insira o peso de peixes: '))\n",
     "excesso = (peso_de_peixes > 50 and peso_de_peixes - 50 or peso_de_peixes)\n",
     "multa = excesso * 4\n",
     "print('excesso = ' + str(excesso))\n",
     "print('multa = ' + str(multa))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
