--- a/Aulas/Aula1_answers.ipynb
+++ b/Aulas/Aula1_answers.ipynb
@@ -36,11 +36,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Lê a nota 1, converte para número flutuante (float) e armazena na variável nota1\n",
     "nota1 = float(input('nota 1: '))\n",
+    "\n",
+    "# Lê a nota 2, converte para número flutuante (float) e armazena na variável nota2\n",
     "nota2 = float(input('nota 2: '))\n",
+    "\n",
+    "# Lê a nota 3, converte para número flutuante (float) e armazena na variável nota3\n",
     "nota3 = float(input('nota 3: '))\n",
+    "\n",
+    "# Lê a nota 4, converte para número flutuante (float) e armazena na variável nota4\n",
     "nota4 = float(input('nota 4: '))\n",
+    "\n",
+    "# Cálculo da média: soma as notas e divide por 4\n",
     "media = (nota1 + nota2 + nota3 + nota4) / 4\n",
+    "\n",
+    "# Imprime o resultado\n",
     "print(media)"
    ]
   },
@@ -57,8 +68,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Lê o raio, converte para número flutuante (float) e armazena na variável raio\n",
     "raio = float(input('raio: '))\n",
+    "\n",
+    "# Realiza o cálculo da área do círculo\n",
     "area = 3.14 * (raio ** 2)\n",
+    "\n",
+    "# Imprime o resultado\n",
     "print('area = ' + str(area))"
    ]
   },
@@ -75,9 +91,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Lê o valor que é ganho por hora, converte para número flutuante (float) e armazena na variável valor_por_hora\n",
     "valor_por_hora = float(input('valor por hora: '))\n",
+    "\n",
+    "# Lê o número de horas trabalhadas no mês, converte para número flutuante (float) e armazena na variável numero_horas_trabalhadas\n",
     "numero_horas_trabalhadas = int(input('horas trabalhadas'))\n",
+    "\n",
+    "# Calcula o salário\n",
     "salario = valor_por_hora * numero_horas_trabalhadas\n",
+    "\n",
+    "# Imprime o resultado\n",
     "print(salario)"
    ]
   },
@@ -94,8 +117,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Lê a temperatura em Farenheit, converte para número flutuante (float) e armazena na variável temperatura\n",
     "temperatura = float(input('temperatura em Farenheit: '))\n",
+    "\n",
+    "# Calcula a temperatura em Celsius\n",
     "celsius = 5 * (temperatura - 32) / 9\n",
+    "\n",
+    "# Imprime o resultado\n",
     "print(celsius)"
    ]
   },
@@ -117,12 +145,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Lê o primeiro número, converte para inteiro (int) e armazena na variável numero_inteiro_1\n",
     "numero_inteiro_1 = int(input('Numero inteiro 1: '))\n",
+    "\n",
+    "# Lê o segundo número, converte para inteiro (int) e armazena na variável numero_inteiro_2\n",
     "numero_inteiro_2 = int(input('Numero inteiro 2: '))\n",
+    "\n",
+    "# Lê o número real, converte para número flutuante (float) e armazena na variável numero_real\n",
     "numero_real = float(input('Numero real: '))\n",
     "\n",
+    "# Imprime o produto do dobro do primeiro com metade do segundo\n",
     "print((2 * numero_inteiro_1) * (numero_inteiro_2 / 2))\n",
+    "\n",
+    "# Imprime a soma do triplo do primeiro com o terceiro\n",
     "print((3 * numero_inteiro_1) + numero_real)\n",
+    "\n",
+    "# Imprime o terceiro elevado ao cubo\n",
     "print(numero_real ** 3)"
    ]
   },
@@ -159,19 +197,31 @@
     }
    ],
    "source": [
+    "# Lê o valor ganho por hora, converte para número flutuante (float) e armazena na variável ganho_por_hora\n",
     "ganho_por_hora = float(input('Ganho por hora: '))\n",
+    "\n",
+    "# Lê o número de horas trabalhadas, converte para inteiro (int) e armazena na variável numero_horas_trabalhadas\n",
     "numero_horas_trabalhadas = int(input('Numero de horas trabalhadas no mês: '))\n",
     "\n",
+    "# Calcula o salário bruto\n",
     "salario_bruto = ganho_por_hora * numero_horas_trabalhadas\n",
+    "\n",
+    "# Calcula o imposto de renda\n",
     "imposto_de_renda = 0.11 * salario_bruto\n",
+    "\n",
+    "# Calcula o valor de INSS\n",
     "inss = 0.08 * salario_bruto\n",
+    "\n",
+    "# Calcula o valor para o Sindicato\n",
     "sindicato = 0.05 * salario_bruto\n",
+    "\n",
+    "# Calcula o salário líquido, tirando os descontos\n",
     "salario_liquido = salario_bruto - imposto_de_renda - inss - sindicato\n",
     "\n",
-    "print('Salario bruto = ' + str(salario_bruto))\n",
-    "print('INSS = ' + str(inss))\n",
-    "print('Sindicato = ' + str(sindicato))\n",
-    "print('Salario liquido = ' + str(salario_liquido))"
+    "print('Salario bruto = ' + str(salario_bruto)) # Imprime salário bruto\n",
+    "print('INSS = ' + str(inss)) # Imprime quanto pagou ao INSS\n",
+    "print('Sindicato = ' + str(sindicato)) # Imprime quanto pagou ao sindicato\n",
+    "print('Salario liquido = ' + str(salario_liquido)) # Imprime o salário líquido"
    ]
   },
   {
@@ -197,19 +247,21 @@
     }
    ],
    "source": [
+    "# Lê o peso dos peixes, converte para inteiro (int) e armazena na variável peso_de_peixes\n",
     "peso_de_peixes = int(input('Insira o peso de peixes: '))\n",
-    "excesso = (peso_de_peixes > 50 and peso_de_peixes - 50 or peso_de_peixes)\n",
+    "\n",
+    "# Calcula o excesso de peso\n",
+    "excesso = (peso_de_peixes > 50 and (peso_de_peixes - 50) or peso_de_peixes)\n",
+    "\n",
+    "# Calcula o valor da multa, pagando um total de 4 reais por quilo excedente\n",
     "multa = excesso * 4\n",
+    "\n",
+    "# Imprime o excesso de peso dos peixes\n",
     "print('excesso = ' + str(excesso))\n",
+    "\n",
+    "# Imprime o valor da multa\n",
     "print('multa = ' + str(multa))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
