--- a/Aulas/Aula1.ipynb
+++ b/Aulas/Aula1.ipynb
@@ -22,7 +22,10 @@
     }
    ],
    "source": [
+    "# Leitura de dados\n",
     "nome = input('Qual seu nome?')\n",
+    "\n",
+    "# Escrita de dados\n",
     "print(nome)"
    ]
   },
@@ -30,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Variáveis e tipos de dados</h2>"
+    "<h2>Tipos de dados</h2>"
    ]
   },
   {
@@ -47,8 +50,9 @@
     }
    ],
    "source": [
+    "# Tipo String\n",
     "nome = 'Roger Smith'\n",
-    "print(type(nome))"
+    "type(nome)"
    ]
   },
   {
@@ -65,8 +69,9 @@
     }
    ],
    "source": [
+    "# Tipo inteiro\n",
     "idade = 21\n",
-    "print(type(idade))"
+    "type(idade)"
    ]
   },
   {
@@ -83,8 +88,9 @@
     }
    ],
    "source": [
+    "# Tipo número racional\n",
     "salario = 3568.39\n",
-    "print(type(salario))"
+    "type(salario)"
    ]
   },
   {
@@ -101,8 +107,153 @@
     }
    ],
    "source": [
+    "# Tipo booleano (Verdadeiro ou Falso)\n",
     "sonolento = True\n",
-    "print(type(sonolento))"
+    "type(sonolento)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Variáveis</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Atribuindo o valor 'parcial' à variável regime\n",
+    "regime = 'parcial'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'parcial'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Imprimindo o valor da variável\n",
+    "regime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imprimindo o valor da variável\n",
+    "print(regime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'variavel_nao_definida' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-369df6d7b242>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Não podemos utilizar uma variável que não foi definida. Veja a mensagem de erro.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mvariavel_nao_definida\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'variavel_nao_definida' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Não podemos utilizar uma variável que não foi definida. Veja a mensagem de erro.\n",
+    "variavel_nao_definida"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total de bens\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pode-se usar letras, números e underline para dar nome à uma variável\n",
+    "regime = 'total de bens'\n",
+    "print(regime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "nota1 = 10\n",
+    "print(nota1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.2.1993\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_de_julgamento = '10.2.1993'\n",
+    "print(data_de_julgamento)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-29-1a3915db68b2>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-1a3915db68b2>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    3nota = 5\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (mas não se pode começar com números)\n",
+    "3nota = 5"
    ]
   },
   {
@@ -114,36 +265,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n"
-     ]
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(10+2)"
+    "# Adição\n",
+    "10+2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(10-2)"
+    "# Subtração\n",
+    "10-2"
    ]
   },
   {
@@ -160,7 +319,8 @@
     }
    ],
    "source": [
-    "print(10*2)"
+    "# Multiplicação\n",
+    "10*2"
    ]
   },
   {
@@ -177,7 +337,8 @@
     }
    ],
    "source": [
-    "print(10/6)"
+    "# Divisão\n",
+    "10/6"
    ]
   },
   {
@@ -194,7 +355,8 @@
     }
    ],
    "source": [
-    "print(10//6)"
+    "# Divisão inteira\n",
+    "10//6"
    ]
   },
   {
@@ -211,7 +373,8 @@
     }
    ],
    "source": [
-    "print(10**3)"
+    "# Exponenciação\n",
+    "10**3"
    ]
   },
   {
@@ -228,7 +391,8 @@
     }
    ],
    "source": [
-    "print(10%3)"
+    "# Módulo\n",
+    "10%3"
    ]
   },
   {
@@ -252,29 +416,32 @@
     }
    ],
    "source": [
-    "print(True and False)"
+    "True and False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(True or False)"
+    "True or False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +453,7 @@
     }
    ],
    "source": [
-    "print(not(True))"
+    "not(True)"
    ]
   },
   {
@@ -310,7 +477,8 @@
     }
    ],
    "source": [
-    "print(10 > 3)"
+    "# Maior que\n",
+    "10 > 3"
    ]
   },
   {
@@ -327,7 +495,8 @@
     }
    ],
    "source": [
-    "print(10 >= 3)"
+    "# Maior ou igual a\n",
+    "10 >= 3"
    ]
   },
   {
@@ -344,7 +513,8 @@
     }
    ],
    "source": [
-    "print(10 < 3)"
+    "# Menor que\n",
+    "10 < 3"
    ]
   },
   {
@@ -361,7 +531,8 @@
     }
    ],
    "source": [
-    "print(10 <= 3)"
+    "# Maior ou igual a\n",
+    "10 <= 3"
    ]
   },
   {
@@ -378,7 +549,8 @@
     }
    ],
    "source": [
-    "print(10 == 3)"
+    "# Igualdade\n",
+    "10 == 3"
    ]
   },
   {
@@ -395,58 +567,8 @@
     }
    ],
    "source": [
-    "print(10 != 3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2>Precedência de operadores</h2>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<table style=\"width:70%\">\n",
-    "  <tr>\n",
-    "    <th style=\"text-align: left\">Operadores</th>\n",
-    "    <th style=\"text-align: left\">Significado</th>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td style=\"text-align: left\">()</td>\n",
-    "    <td style=\"text-align: left\">Parênteses</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td style=\"text-align: left\">**</td>\n",
-    "    <td style=\"text-align: left\">Expoente</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td style=\"text-align: left\">*, /, //, %</td>\n",
-    "    <td style=\"text-align: left\">Multiplicação, Divisão, Divisão de chão, Módulo</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td style=\"text-align: left\">+, -</td>\n",
-    "    <td style=\"text-align: left\">Adição, Subtração</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td style=\"text-align: left\">==, !=, >, >=, <, <=</td>\n",
-    "    <td style=\"text-align: left\">Operadores de comparação</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td style=\"text-align: left\">not</td>\n",
-    "    <td style=\"text-align: left\">NÃO lógico</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td style=\"text-align: left\">and</td>\n",
-    "    <td style=\"text-align: left\">E lógico</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td style=\"text-align: left\">or</td>\n",
-    "    <td style=\"text-align: left\">OU lógico</td>\n",
-    "  </tr>\n",
-    "</table>"
+    "# Desigualdade\n",
+    "10 != 3"
    ]
   },
   {
@@ -493,7 +615,8 @@
     }
    ],
    "source": [
-    "print(str(10))"
+    "# Conversão para o tipo string (str)\n",
+    "str(10)"
    ]
   },
   {
@@ -510,7 +633,30 @@
     }
    ],
    "source": [
-    "print(int(\"2019\"))"
+    "# Conversão para o tipo inteiro (int)\n",
+    "int(\"2019\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '900/2019'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-1399e766fe26>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Não é possível converter um string que não seja composta apenas por dígitos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'900/2019'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '900/2019'"
+     ]
+    }
+   ],
+   "source": [
+    "# Não é possível converter um string que não seja composta apenas por dígitos\n",
+    "int('900/2019')"
    ]
   },
   {
@@ -527,7 +673,30 @@
     }
    ],
    "source": [
-    "print(float(\"20.8\"))"
+    "# Conversão para o tipo número flutuante (float)\n",
+    "float(\"20.8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: '900/2019'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-072ae3d4a8d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Não é possível converter um string que não seja composta apenas por dígitos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'900/2019'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: '900/2019'"
+     ]
+    }
+   ],
+   "source": [
+    "# Não é possível converter um string que não seja composta apenas por dígitos\n",
+    "float('900/2019')"
    ]
   },
   {
@@ -544,7 +713,8 @@
     }
    ],
    "source": [
-    "print(bool(\"False\"))"
+    "# Conversão para o tipo booleano (bool)\n",
+    "bool(\"False\")"
    ]
   },
   {
